# n-cop

./: .gitignore  CLAUDE.md  README.md  ncop.cpp  patch.rs
cuda_solver/: main.cu
docs/: CNAME  index.html
docs/wasm-bot/: wasm_bot.d.ts  wasm_bot.js  wasm_bot_bg.wasm
ncop-rs/: Cargo.toml
ncop-rs/ncop2-rs/: Cargo.toml
ncop-rs/ncop2-rs/src/: main.rs
ncop-rs/src/: main.rs
ncop2-rs/: Cargo.toml  build.rs
ncop2-rs/src/: main.rs
ncop3-rs/: Cargo.toml
ncop3-rs/src/: main.rs
wasm-bot/: Cargo.toml
wasm-bot/src/: lib.rs
webui/: README.md  index.html
webui/wasm-bot/: package.json  wasm_bot.js  wasm_bot_bg.wasm  wasm_bot_bg.wasm.d.ts
