[package]
name = "wasm-bot"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = ["console"] }
console_error_panic_hook = "0.1.7"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
